# Triangles

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
include/: data_structures.hpp
src/: data_structures.cpp  find_intersection.cpp
test/: gtests.cpp
